--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,15 +9,15 @@ background: #344051;
 }
 .logo{
 color: #fff;
-font-size: 28px;
+font-size: 16px;
 line-height: 60px;
-padding-left: 388px;
+padding-left: 288px;
 float: left;
 }
 
 .menu_item{
 float: left;
-padding-left: 432px;
+padding-left: 332px;
 }
 
 .menu_item div{
@@ -25,7 +25,7 @@ float: left;
 line-height: 60px;
 color: #fff;
 margin-right: 40px;
-font-size: 16px;
+font-size: 12px;
  text-transform: uppercase;
 }
 div.main1{
@@ -36,22 +36,22 @@ div.main1{
 }
 .title__container{
       float: left;
-      margin: 432px 0px 0px 404px;
+      margin: 332px 0px 0px 304px;
       color: #2c384a;
       text-align: center;
 }
 .title__container h1{
-      font-size: 60px;
+      font-size: 44px;
       font-weight: bold;
 }
 .title__container h4{
-      margin-top: 40px;
-      font-size: 22px;
+      margin-top: 30px;
+      font-size: 16px;
       color: #8a919c;
 }
 
 .title__container input{
-    height: 40px;
+    height: 30px;
     text-align: center;
     border: 2px solid #6d7682;
  background: none;
@@ -59,7 +59,7 @@ div.main1{
     color: #8a919c;
     font-size: 13px;
     padding: 0px 16px;
-    margin: 58px 14px 0px 14px;
+    margin: 48px 14px 0px 14px;
 }
 div.main2{
    width: 100%;
@@ -71,14 +71,14 @@ div.main2{
      text-align: center;    
 }
 .title__container1 h3{  
-   font-size: 38px;
+   font-size: 28px;
     text-decoration: underline #d17700;
  }
 .block p{
     color: #6f707e;
     margin-top: 310px;
 margin-left: 25%;
-    font-size: 20px;
+    font-size: 14px;
     width: 50%;
     text-align: start;
 }
@@ -89,7 +89,7 @@ margin-left: 25%;
      width: 50%;  
      margin-top: 50px;
     margin-left: 25%;
-     font-size: 20px;
+     font-size: 14px;
     text-align: start;
  }
 .title__container1 input{
@@ -99,7 +99,7 @@ margin-left: 25%;
     background: none;
     border-radius: 5px;
     color: #6f707e;
-    font-size: 13px;
+    font-size: 11px;
     padding: 0px 12px 0px 25px;
     margin: 40px 0px 0px 0px;
     background: url(../img/%D0%B8%D0%BA%D0%BE%D0%BD%D0%BA%D0%B0.png) 5px 9px/auto auto no-repeat;
@@ -107,7 +107,7 @@ margin-left: 25%;
 div.main3{
    width: 100%;
     float: left;
-    background: url(../img/%D0%BD%D0%BE%D1%83%D1%82.png) 790px 270px/auto auto no-repeat , url(../img/%D0%B7%D0%BD%D0%B0%D0%BA.png) 1035px 270px/auto auto no-repeat , url(../img/%D1%80%D0%B0%D0%BA%D0%B5%D1%82%D0%B0.png) 1310px 270px/auto auto no-repeat , url(../img/%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BE%D1%84%D0%BE%D0%BD.png) 1575px 270px/auto auto no-repeat , url(../img/%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B0%20%D1%84%D0%BE%D0%BD%D0%B0.png) center/cover no-repeat;
+    background: url(../img/%D0%BD%D0%BE%D1%83%D1%82.png) 325px 250px/auto auto no-repeat , url(../img/%D0%B7%D0%BD%D0%B0%D0%BA.png) 600px 250px/auto auto no-repeat , url(../img/%D1%80%D0%B0%D0%BA%D0%B5%D1%82%D0%B0.png) 875px 250px/auto auto no-repeat , url(../img/%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%BE%D1%84%D0%BE%D0%BD.png) 1200px 250px/auto auto no-repeat , url(../img/%D0%BA%D0%B0%D1%80%D1%82%D0%B8%D0%BD%D0%BA%D0%B0%20%D1%84%D0%BE%D0%BD%D0%B0.png) center/cover no-repeat;
 }
 .title__container2{
     margin-top: 110px;
@@ -115,12 +115,12 @@ div.main3{
       text-align: center;   
 }
 .title__container2 h3{
-     font-size: 34px;
+     font-size: 28px;
     text-decoration: underline #d17700;    
 }
 .menu_item1{
     height: 450px;
-    padding-left: 730px;
+    padding-left: 250px;
 
     float: left;
 }
@@ -128,26 +128,26 @@ div.main3{
     
     float: left;
     color: #cf7600;
-    margin-left: 40px;
-   margin-right: 115px;
-    font-size: 16px;
+    margin-left: 50px;
+   margin-right: 145px;
+    font-size: 14px;
     text-transform: capitalize;
-    padding-top: 210px;
+    padding-top: 200px;
 }
 .menu_item2 p{
     color: #6f707e;
     float: left;
     padding-top: 15px;
-    width: 210px;
+    width: 205px;
     text-align: center;
-    margin-right: 50px;
-    font-size: 16px;
+    margin-right: 80px;
+    font-size: 14px;
 }
    
 div.main4{
     width: 100%;
     float: left;
-    background: url(../img/%D1%84%D0%BE%D1%82%D0%BA%D0%B0.png) 180px 260px/auto auto no-repeat;
+    background: url(../img/%D1%84%D0%BE%D1%82%D0%BA%D0%B0.png) 50px 260px/auto 70% no-repeat;
  }
 .title__container3{
         margin-top: 100px;
@@ -155,35 +155,34 @@ div.main4{
       text-align: center;   
 }
 .title__container3 h3{
-     font-size: 34px;
+     font-size: 28px;
     text-decoration: underline #d17700;    
 }
-.block3 {
+.block3 p{
     float: left;
     width: 100%;
-    margin-top: 70px;
-    font-size: 16px;
+    margin-top: 60px;
+    font-size: 12px;
     text-align: center;
 }
 .menu_item3{
      
     float: left;
     color: #384354;
-    margin-top: 670px;
-    font-size: 18px;
+    margin-top: 600px;
+    font-size: 14px;
     text-align: start;
-   margin-left: 565px;
-    margin-right: 100px;
+    margin-left: 350px;
     width: 200px;
 }
 .menu_item4{
     float: left;
     color: #6f707e;
-    width: 900px;
+    width: 675px;
     text-align: start;
-    font-size: 18px;
-     margin-top: -70px;
-    margin-left: 855px;
+    font-size: 13px;
+     margin-top: -60px;
+    margin-left: 600px;
 }
 .title__container3 input{
     text-align: center;
@@ -192,9 +191,10 @@ div.main4{
     border: 2px solid #63b5ae;
     background-color: #71c1ba;
     border-radius: 5px;
-    font-size: 18px;
-    padding: 16px 40px;
-    margin-left: 565px;
+    font-size: 14px;
+    padding: 8px 32px;
+    margin-left: 350px;
+    margin-top: 20px;
 }
 div.main5{
     width: 100%;
@@ -208,32 +208,32 @@ div.main5{
 }
     
 .title__container4 h2{
-     font-size: 34px;
+     font-size: 28px;
     font-weight: 600;
 }
 .menu_item5{
     
-    width: 1000px;
-    font-size: 24px;
+    width: 50%;
+    font-size: 15px;
     margin-top: 60px;
     text-align: start;
-    margin-left: 650px;
+    margin-left: 400px;
     line-height: 50px;
     
 }
 .menu_item6{
-    border-top: 2px solid #000;
-word-spacing: 850px;
-    font-size: 20px;
+    border-top: 2px solid #d1d1d1;
+    word-spacing: 680px;
+    font-size: 16px;
     margin-top: 60px;
     text-align: start;
- width: 1000px;
-    line-height: 50px;
+    width: 100%;
+    line-height: 25px;
 }
 div.main6{
     width: 100%;
     float: left;
-    background: url(../img/%D1%81%D0%BC%D0%B0%D0%B9%D0%BB.png) 720px 250px/auto auto no-repeat , url(../img/%D1%81%D0%BA%D0%BE%D0%B1%D0%BA%D0%B8.png) 1025px 250px/auto auto no-repeat , url(../img/%D0%B3%D0%B0%D0%BB%D0%BE%D1%87%D0%BA%D0%B0.png) 1340px 250px/auto auto no-repeat , url(../img/%D0%BA%D1%83%D0%B1%D0%BE%D0%BA.png) 1625px 250px/auto auto no-repeat , url(../img/%D1%84%D0%BE%D0%BD.png) center/auto 100% no-repeat; 
+    background: url(../img/%D1%81%D0%BC%D0%B0%D0%B9%D0%BB.png) 360px 250px/auto auto no-repeat , url(../img/%D1%81%D0%BA%D0%BE%D0%B1%D0%BA%D0%B8.png) 630px 250px/auto auto no-repeat , url(../img/%D0%B3%D0%B0%D0%BB%D0%BE%D1%87%D0%BA%D0%B0.png) 900px 250px/auto auto no-repeat , url(../img/%D0%BA%D1%83%D0%B1%D0%BE%D0%BA.png) 1170px 250px/auto auto no-repeat , url(../img/%D1%84%D0%BE%D0%BD.png) center/auto 100% no-repeat; 
 }
 .title__container5{ 
      margin-top: 100px;
@@ -241,37 +241,37 @@ div.main6{
       text-align: center; 
 }
 .title__container5 h3{
-     font-size: 30px;
+     font-size: 28px;
     text-decoration: underline #d17700;    
 }
 .menu_item7{
-    height: 300px;
-    padding-left: 530px;
+    height: 100px;
+    padding-left: 200px;
 float: left;
    
 }
 .menu_item7>b{
      float: left;
-     margin-left: 190px;
-    font-size: 32px;
+     margin-left: 170px;
+    font-size: 22px;
     padding-top: 200px;   
-    margin-right: 55px;
+    margin-right: 60px;
     text-align: center;
 }
 .menu_item8>p{
     
     float: left;
     padding-top: 30px;
-     margin-left: 120px;
+     margin-left: 100px;
  text-align: center;
-    margin-right: 41px;
+    margin-right: 8px;
     font-size: 16px;
 }
 div.main7{
     
     width: 100%;
     float: left;
-    background: url(../img/%D1%84%D0%BE%D1%82%D0%BA%D0%B02.png) 50% 200px/auto auto no-repeat , url(../img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6.png) 1100px 470px/auto auto no-repeat , url(../img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png) 1125px 470px/auto auto no-repeat , url(../img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F%202.png) 1150px 470px/auto auto no-repeat;
+    background: url(../img/%D1%84%D0%BE%D1%82%D0%BA%D0%B02.png) 50% 200px/auto auto no-repeat , url(../img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6.png) 750px 470px/auto auto no-repeat , url(../img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png) 775px 470px/auto auto no-repeat , url(../img/%D0%9E%D1%80%D0%B0%D0%BD%D0%B6%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F%202.png) 800px 470px/auto auto no-repeat;
 }
 .title__container6{
     margin-top: 100px;
@@ -279,94 +279,98 @@ div.main7{
       text-align: center;  
 }
 .title__container6 h3{
-     font-size: 30px;
+     font-size: 28px;
     text-decoration: underline #d17700;  
-}
-.block3 p{
-    color: #6f707e;
-    margin-top: 150px;
-margin-left: 25%;
-    font-size: 16px;
-    width: 50%;
-    text-align: center;
 }
 .block4 p{
     color: #6f707e;
-    margin-top: 285px;
-    
-    font-size: 16px;
+    margin-top: 200px;
+margin-left: 25%;
+    font-size: 14px;
+    width: 50%;
+    text-align: center;
+}
+.block5 p{
+    color: #6f707e;
+    margin-top: 50px; 
+    font-size: 14px;
     text-align: center;
 }
 div.main8{
     width: 100%;
     float: left;
-    background: url(../img/%D0%B3%D0%B5%D0%BE.png) 800px 300px/auto auto no-repeat , url(../img/%D0%BA%D0%BE%D0%BD%D0%B2%D0%B5%D1%80%D1%82.png) 1160px 300px/auto auto no-repeat , url(../img/%D1%82%D1%80%D1%83%D0%B1%D0%B0.png) 1420px 300px/auto auto no-repeat , url(../img/%D0%A4%D0%BE%D0%BD4.png) center/cover no-repeat;
+    background: url(../img/%D0%B3%D0%B5%D0%BE.png) 490px 300px/auto auto no-repeat , url(../img/%D0%BA%D0%BE%D0%BD%D0%B2%D0%B5%D1%80%D1%82.png) 775px 300px/auto auto no-repeat , url(../img/%D1%82%D1%80%D1%83%D0%B1%D0%B0.png) 1065px 300px/auto auto no-repeat , url(../img/%D0%A4%D0%BE%D0%BD4.png) 0px 0px/100% 950px no-repeat;
 }
 .title__container7{
   float: left;
       margin-top: 100px;
     margin-bottom: 100px;
       text-align: center;  
-   margin-left: 500px;
+   
 }
 .title__container7 h3{
-     font-size: 30px;
+   font-size: 28px;
     color: #ffffff;
     text-decoration: underline #d17700;  
 }
-.block5 p{
+.block6 p{
     color: #ffffff;
     text-align: center;
     margin-top: 100px;
-    font-size: 16px;
-}
-.menu_item9 p{
-    float: left;
-    color: #ffffff;
-     font-size: 16px;
-     text-align: center;
-    padding-left: 290px;
-     width: 240px;   
+    font-size: 14px;
 }
 .menu_item9 b{
+    
+    color: #ffffff;
+      float: left;
+    padding-top: 100px;
+    width: 130px;
+    text-align: center;
+    margin-right: -270px;
+    font-size: 12px;
+    margin-left: 430px;
+}
+.menu_item10 p{
    float: left;
     color: #ffffff;
      font-size: 18px;
-   margin-left: -260px;
-    margin-top: 170px;
+   text-align: center;
+    padding-top: 80px;
+    margin-left: -210px;
     font-weight: bold;
 }
 .title__container7 input{
-    height: 35px;
+    height: 40px;
    float: left;
-    width: 350px;
-     text-align: start;
+       text-align: start;
     border: 2px solid #ffffff;
     background-color: #ffffff;
-     font-size: 18px;
-    margin: -30px 12px 0px 12px;
+     font-size: 14px;
+   width: 365px;
+    margin: -50px -400px 50px -400px;
+    margin-left: 425px;
        padding-left: 16px;
 }
-.title__container7 textarea{
+.title__container8 textarea{
  text-align: center;
   float: left;
-    margin-left: -750px;
-    margin-top: 200px;
-     height: 60px;
+    margin-left: 425px;
+    margin-top: -120px;
+     height: 100px;
 }
 .title__container9 input{
   float: left;
     height: 45px;
     text-align: center;
      color: #ffffff;
-    border: 4px solid #ffffff;
+    border: 2px solid #ffffff;
     font-weight: 
     background: none;
     border-radius: 5px;
    background-color: rgba(255,58,110, 0);
-    font-size: 15px;
-    margin: 170px 20px 0px 650px;
- 
+    font-size: 14px;
+    margin: 30px 15px 0px 720px;
+ padding: 0px 8px 0px 8px;
    width: 150px;
 }
 .title__container9 p{
@@ -377,4 +381,28 @@ div.main8{
     margin-left: -260px;
     width: 800px;
     text-align: center
+}
+div.main9{
+    width: 100%;
+    float: left;
+    background: url(../img/%D0%9A%D0%B0%D1%80%D1%82%D0%B0%20%D0%BA%D0%BE%D0%BF%D0%B8%D1%8F.png) 0px 200px/auto 330px no-repeat;  
+}
+.title__container10{ 
+    float: left;
+width: 1580px;
+height: 100px;
+background: #344051;
+      margin-top: 520px;
+    margin-bottom: -100px;
+     text-align: center; 
+}
+.title__container10 p{
+    float: left;
+       color: #fff;
+font-size: 12px;
+text-align: center;
+padding-left: 850px;
+float: left;
+    margin-top: -30px;
+  
 }
